--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,6 +3,7 @@
   padding: 0;
   margin: 0;
   scroll-behavior: smooth;
+  
 }
 
 body {
@@ -14,6 +15,7 @@ body {
     display: flex;
     flex-direction:  column; 
     margin:  0;
+    align-items: center;
 }
 
 a {
@@ -23,7 +25,7 @@ a {
 
 
 
- .gradient__bg {
+ /* .gradient__bg {
   background:-moz-radial-gradient(circle at 3% 25%, rgba(0, 40, 83, 1) 0%, rgba(4, 12, 24, 1) 25%);
 
   
@@ -37,7 +39,7 @@ a {
 
 
   background:radial-gradient(circle at 3% 25%, rgba(0, 40, 83, 1) 0%, rgba(4, 12, 24, 1) 25%);
-}
+} */
 
 
 
@@ -45,7 +47,7 @@ a {
   background: var(--gradient-text);
   background-clip: text;
   -webkit-background-clip: text;
-  -webkit-text-fill-color: rgb(34, 20, 120);
+  -webkit-text-fill-color: rgb(67, 20, 120);
 }
 
 .section__padding {
