--- a/client/src/components/login.css
+++ b/client/src/components/login.css
@@ -3,6 +3,7 @@
 /* Style the form container */
 .form-container {
     max-width: 400px; /* Adjust as needed */
+    max-height: 50px;
     margin: auto;
     padding: 20px;
     background-color: #fff;
@@ -55,7 +56,7 @@
     display: block;
     margin-bottom: 8px;
     color: #555;
-    align-items: center;
+    align-items: cente;
 
   }
   
