--- a/client/src/components/FormAction.css
+++ b/client/src/components/FormAction.css
@@ -2,11 +2,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh; /* Adjust as needed based on your layout */
+    height: 00vh; /* Adjust as needed based on your layout */
 }
 
 .button {
-    width: 150px; /* Adjust the width as needed */
+    width: 250px; /* Adjust the width as needed */
     height: 30px; /* Adjust the height as needed */
     border: 1px solid transparent;
     text-align: center;
@@ -16,6 +16,7 @@
     cursor: pointer;
     border-radius: 5px;
     transition: background-color 0.3s ease;
+    align-items: center;
 }
 
 .button:hover {
