--- a/client/src/components/input.css
+++ b/client/src/components/input.css
@@ -81,7 +81,7 @@
     max-width: 400px;
     margin: auto;
     padding: 20px;
-    border: 1px solid #e2e8f0;
+    border: 1px solid #1a212a;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   
