--- a/client/src/pages/login.css
+++ b/client/src/pages/login.css
@@ -7,7 +7,7 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-color: #f7fafc; /* Adjust as needed */
+    background-color: #6796b6; /* Adjust as needed */
 }
 
 body {
