verify and homepage added

--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #cbbce8;
+    background-color: #babdc2;;
 
     padding: 2rem 6rem;
 }
