--- a/client/src/pages/home.css
+++ b/client/src/pages/home.css
@@ -1,7 +1,10 @@
 .gpt3__header {
     display: flex;
     flex-direction: row;
-    background-color: #cbbce8;
+    background-color: rgb(234, 220, 245);
+    background: url('../iit.jpg') center/cover no-repeat; /* Add your image URL */
+    padding-left: 5%;
+    
 }
 
 .gpt3__header-content {
@@ -11,26 +14,25 @@
     align-items: flex-start;
     flex-direction: column;
 
-    margin-right: 5rem;
+    margin-right: 2rem;
 }
-.home-container {
-    background-color: #3498db;
-  }
-  
+
 .gpt3__header-content h1 {
     font-family: var(--font-family);
-    font-weight: 600;
-    font-size: 50px;
+    font-weight: 500;
+    font-size: 45px;
     line-height: 75px;
     letter-spacing: -0.04em;
+    color: #4c4fd1;
+
 }
 .gpt3__header-content h2 {
     font-family: var(--font-family);
-    font-weight: 400;
+    font-weight: 500;
     font-size: 30px;
     line-height: 45px;
     letter-spacing: -0.04em;
-    color: rgb(33, 30, 89);
+    color: rgb(4, 4, 11);
     font-style: italic;
 }
 
@@ -39,9 +41,10 @@
     font-weight: 70;
     font-size: 20px;
     line-height: 25px;
-    color: var(--color-text);
-    
+    color: #fdfdff;
+    background-color: rgb(0, 0, 0);
     margin-top: 1.5rem;
+    background: rgba(0, 0, 0, 0.5); 
 }
 
 .gpt3__header-content__input {
@@ -119,11 +122,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
 }
 
 .gpt3__header-image img {
-    width: 100%;
-    height: 100%;
+    width: 50%;
+    height: 50%;
 }
 
 
