--- a/client/src/components/input.css
+++ b/client/src/components/input.css
@@ -2,7 +2,7 @@
 
 /* Add any additional styles you need for the input component */
 .my-5 {
-    margin-top: 1.25rem; /* Adjust as needed */
+    
     align-self: center;
   }
   
@@ -24,15 +24,18 @@
   .block {
     display: block;
   }
-  
+
   .w-full {
     width: 100%;
   }
   
   .px-3 {
-    padding-left: 0.75rem;
-    padding-right: 0.75rem;
+    
+    margin: 0 auto; /* Center horizontally */
+    display: flex;
+    align-items: center; /* Center vertically */
   }
+  
   
   .py-2 {
     padding-top: 0.5rem;
