--- a/client/src/pages/home.css
+++ b/client/src/pages/home.css
@@ -79,8 +79,8 @@
     font-weight: 400;
     font-size: 20px;
     line-height: 28px;
-    background: #FF4820;
-    border: 2px solid #FF4820;
+    background: #efebeb;
+    border: 2px solid #edeaea;
     padding: 0 1rem;
     color: #fff;
     cursor: pointer;
