--- a/client/src/components/signup.css
+++ b/client/src/components/signup.css
@@ -1,6 +1,69 @@
-.buttoncenter {
+/* login.css */
+
+/* Style the form container */
+.form-container {
+    max-width: 200px; /* Adjust as needed */
+    max-height: 25px;
+    align-self: center;
+    padding: 20px;
+    background-color: #ffffff;
+    border: 1px solid #fffeff;
+    border-radius: 10px;
+  }
+  .buttoncenter {
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 20px; /* Adjust as needed */
 }
+  /* Style form inputs and labels */
+  .space-y-6 > div {
+    margin-bottom: 1.5rem; /* Adjust as needed */
+  }
+  
+  /* Style the submit button */
+  .login-btn {
+    display: inline-block;
+    background-color: #4caf50; /* Adjust as needed */
+    color: #fff;
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  .login-btn:hover {
+    background-color: #45a049; /* Adjust as needed */
+    align-items: center;
+  }
+  
+  /* Style the form extra content */
+  .form-extra {
+    margin-top: 20px; /* Adjust as needed */
+    text-align: center;
+    color: #dcb3b3;
+    align-self: center;
+  }
+  
+  /* Style the input fields */
+  .input-field {
+    width: 100%;
+    padding: 10px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    border-radius: 100px;
+  }
+  
+  /* Style the form labels */
+  .label {
+    font-size: 1rem; /* Adjust as needed */
+    font-weight: bold;
+    display: block;
+    margin-bottom: 8px;
+    color: #555;
+    align-items: cente;
+
+  }
+  
