--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -89,7 +89,7 @@
 .gpt3__navbar-menu_container button {
     padding: 0.5rem 1rem;
     color: #dad9e5;
-    background: #FF4820;
+    background: #b895f3;
     font-family: var(--font-family);
     font-weight: 500;
     font-size: 16px; /* Reduced font size */
